# turn

./: .gitignore  Untitled25.ipynb  Untitled32.ipynb  Untitled42.ipynb  Untitled53.ipynb  Untitled54.ipynb  Untitled57.ipynb  Untitled58.ipynb  Untitled74.ipynb  chat-Semantic Turn Theory Fundamentals-2.md  tubules.ipynb  turn.ipynb
demo_minimal/: README.md  bootstrap_8d.py  consciousness_bridge.py  consciousness_experiment_results.npy  debug_rust.py  demo.py  discovered_8d_coordinates.npy  polysemantic_mining.py  polysemantic_test_results.npy  polysemantic_turn_coordinates.npy  test_polysemantic_coordinates.py  test_rust_integration.py  turn_1000.py  turn_1000_enhanced.py  turn_embedding.py  turn_rust_fixed.py  turn_rust_hybrid.py  turn_rust_working.py  visualize.py  y_combinator_turns.py
turngpt-rust/: Cargo.toml  pyproject.toml
turngpt-rust/src/: lib.rs  polynomial.rs  semantic.rs
turngpt_100m/: README.md  TRAINING_REPORT.md  dataset.py  demo.py  model.py  requirements.txt  streamlit_app.py  test_system.py  train.py  train_enhanced.py  train_simple.py  turn_embedding_scaled.py
