[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "turngpt-rust"
description = "Rust acceleration for TurnGPT computational bottlenecks"
version = "0.1.0"
authors = [
    {name = "TurnGPT Team"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
test = [
    "pytest",
    "torch",
]

[tool.maturin]
module-name = "turngpt_rust"
